# archives_security

./: C2PA_IMPLEMENTATION_INVENTORY.md  README.md
01_Core_Documentation/: C2PA_27_Step_Conformance_Checklist.md  C2PA_SUBMISSION_PACKAGE_COMPLETE.md  C2PA_Security_Architecture_Document.md  Level_1_Functional_Conformance_Report.md  Level_2_Higher_Assurance_Report.md  SECURITY_CONFORMANCE_PASSED.md  Supporting_Evidence_Package.md
02_C2PA_Implementation/Core_Services/: AppAttestService.swift  C2PAService.swift  Ed25519Service.swift  ExternalValidationService.swift  KeyManager.swift  ManifestVerificationService.swift  MetadataSanitizer.swift
02_C2PA_Implementation/Integration/: C2PAStatusView.swift  CameraRecordingView.swift
02_C2PA_Implementation/Models/: C2PAModels.swift  MediaModels.swift
02_C2PA_Implementation/Security/: SelfSignedCertificateGenerator.swift  TrustAnchoringManager.swift  (+1 more)
05_Build_Configuration/: BUILD_NOTES.md  Info.plist
06_C2PA_Dependencies/: DEPENDENCIES_NOTE.md
06_C2PA_Dependencies/ED25519_uniffi_custom/: Cargo.toml  LICENSE  README.md  ed25519-uniffi-implementation-plan.md  ed25519_uniffi.udl  rebuild.sh  setup.sh
06_C2PA_Dependencies/ED25519_uniffi_custom/bindings/python/: ed25519_uniffi.py  libuniffi_ed25519_uniffi.dylib
06_C2PA_Dependencies/ED25519_uniffi_custom/bindings/swift/: ed25519_uniffi.swift  ed25519_uniffiFFI.h  ed25519_uniffiFFI.modulemap
06_C2PA_Dependencies/ED25519_uniffi_custom/examples/: python_example.py  swift_example.swift
06_C2PA_Dependencies/ED25519_uniffi_custom/src/: ed25519_uniffi.udl  lib.rs
(+31 files in other folders)
